# Rust-RabbitMQ-RPC

./: .gitignore  Cargo.toml  README.md
